# csv2ddl

./: .gitignore  AGENTS.md  GITHUB.md  LICENSE  OpenSourceCommunityHowTo.md  README.md  ROADMAP.md  TODO.md  __init__.py  ai-bestPractices.md  architecture.md  codereview.md  csv2ddl.py  ddl_generator.py  design.md  dialect_mapper.py  file_reader.py  pyproject.toml  requirements.txt  sample_data.csv  type_inference.py  weekly_demand_partner_report_ddl.sql  weekly_error_report_ddl.sql  weekly_rev_check_elm_ddl.sql  weekly_supply_partner_report_ddl.sql
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: Weekly Demand Partner Report. 9.21.25.xlsx  Weekly Error Report. 9.21.25.xlsx  Weekly Rev Check Elm 9.21.25.xlsx  Weekly Supply Partner Report. 9.21.25.xlsx
tests/: conftest.py  test_ddl_generator.py  test_dialect_mapper.py  test_file_reader.py  test_type_inference.py
