[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2ddl"
version = "0.1.0"
description = "Convert CSV or Excel data into SQL DDL statements."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "csv2ddl contributors" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "python-dateutil>=2.8.0",
    "chardet>=5.0.0",
    "openpyxl>=3.0.0"
]

[project.optional-dependencies]
test = ["pytest>=7.4.0"]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.6.0"
]

[project.urls]
"Homepage" = "https://example.com/csv2ddl"

[project.scripts]
csv2ddl = "csv2ddl:main"

[tool.setuptools]
py-modules = [
    "csv2ddl",
    "file_reader",
    "type_inference",
    "dialect_mapper",
    "ddl_generator"
]
